--- a/stefan_tex.sty
+++ b/stefan_tex.sty
@@ -230,9 +230,9 @@
 \newcommand{\hTheta}{\widehat{\Theta}}
 \newcommand{\hOmega}{\widehat{\Omega}}
 
-\newcommand{\boldX}{\bm{X}}
-\newcommand{\boldY}{\bm{Y}}
-\newcommand{\bolddelta}{\bm{\delta}}
+\newcommand{\boldX}{\mathbf{X}}
+\newcommand{\boldY}{\mathbf{Y}}
+\newcommand{\bolddelta}{\mathbf{\delta}}
 
 \newcommand{\1}{\mathbf{1}}
 \newcommand{\tf}{\tilde{f}}
