--- a/topics/PCA.tex
+++ b/topics/PCA.tex
@@ -181,7 +181,7 @@ PCA is probably due to \cite{Zou2006SparsePCA}, where $v_1$ is the solution to
 $$\text{minimize}_{v_1,\alpha} \vert \vert X_c - X_cv_1 \alpha^T \vert \vert_F^2 +\lambda \vert \vert v_1 \vert \vert_2^2+\mu \vert \vert v_1 \vert \vert_1 \quad \text{subject to } \vert \vert \alpha \vert \vert_2^2 =1.$$
 This can be solved by an alternating method (fix $v_1$ and solve the convex optimization problem w.r.t to $\alpha$, then fix $\alpha$ and solve the convex optimization problem with respect to $v_1$ and repeat). Finally, we must normalize $v_1$ to be a unit vector. To obtain subsequent sparse principal component directions we repeat with the additional constraint that $v_2^T v_1=0$.  More formally, to compute the first $k$ sparse principal components  \cite{Zou2006SparsePCA} propose (after centering the data $x_1,\dots, x_n$) solving $$\text{minimize}_{A,B}  \sum_{i=1}^n \vert \vert \widetilde{X}_i - AB^T \widetilde{X}_i \vert \vert_2^2 + \lambda \sum_{j=1}^k  \vert \vert B_j \vert \vert_F^2+\sum_{j=1}^k \lambda_{1,j} \vert \vert B_j \vert \vert_1 \quad \text{subject to } A^T A =I_{k \times k}.$$
 
-The above optimization problem can be solved with an alternating algorithm. Given $\widehat{B}_t$, we can find the optimal $A$ by computing the SVD  of $(X_c^T X_c)\widehat{B}_t$ (with $(X_c^T X_c)\widehat{B}_t =UDV^T$ and set $\widehat{A}_{t+1} =U V^T$ ). Given $\widehat{A}_{t+1}$, we can set $\widehat{B}_{t+1} = [\widehat{\beta}_1 \dots \widehat{\beta}_k]$ where each $\widehat{\beta}_j$ is the solution to an elastic net optimization problem $$\widehat{\beta}_j = \argmin\limits_{\beta_j} \vert \vert Y_j^* - X_c \beta_j \vert \vert_2^2 + \lambda \vert \vert \beta_j \vert \vert_2^2 + \lambda_{1,j} \vert \vert \beta_j \vert \vert_1,$$ where $Y_j^* =X_c (\widehat{A}_{t+1} \bm{e}_j)$ and $\bm{e}_j$ is the $j$th standard basis vector. Once we have the solution $(\widehat{A},\widehat{B})$ to the above optimization problem, the columns of $\widehat{B}$ give the first $k$ sparse principal component directions. Note that the $\lambda$'s may have to be tuned to attain the desired level of sparsity. 
+The above optimization problem can be solved with an alternating algorithm. Given $\widehat{B}_t$, we can find the optimal $A$ by computing the SVD  of $(X_c^T X_c)\widehat{B}_t$ (with $(X_c^T X_c)\widehat{B}_t =UDV^T$ and set $\widehat{A}_{t+1} =U V^T$ ). Given $\widehat{A}_{t+1}$, we can set $\widehat{B}_{t+1} = [\widehat{\beta}_1 \dots \widehat{\beta}_k]$ where each $\widehat{\beta}_j$ is the solution to an elastic net optimization problem $$\widehat{\beta}_j = \argmin\limits_{\beta_j} \vert \vert Y_j^* - X_c \beta_j \vert \vert_2^2 + \lambda \vert \vert \beta_j \vert \vert_2^2 + \lambda_{1,j} \vert \vert \beta_j \vert \vert_1,$$ where $Y_j^* =X_c (\widehat{A}_{t+1} \mathbf{e}_j)$ and $\mathbf{e}_j$ is the $j$th standard basis vector. Once we have the solution $(\widehat{A},\widehat{B})$ to the above optimization problem, the columns of $\widehat{B}$ give the first $k$ sparse principal component directions. Note that the $\lambda$'s may have to be tuned to attain the desired level of sparsity. 
 
 
 
